# flutter_ort_plugin

./: .metadata  .pubignore  CHANGELOG.md  LICENSE  README.md  ffigen.yaml  pubspec.yaml
android/: .gitignore  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: .gitignore  README.md  pubspec.yaml
example/android/app/: build.gradle.kts  google-services.json
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_ort_plugin_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: benchmark_page.dart  inference_page.dart  isolate_page.dart  main.dart  providers_page.dart  shared.dart  yolo_camera_page.dart  yolo_detector.dart  yolo_image_page.dart  yolo_setup_page.dart  yolo_video_page.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/scripts/: build_and_distribute.sh
ios/: .podspec  flutter_ort_plugin.podspec
ios/Classes/: OnnxLinkerFix.h  OnnxLinkerFix.m  flutter_ort_plugin.c
lib/: flutter_ort_plugin.dart  onnx_runtinme.dart  ort_isolate_session.dart  ort_providers.dart  ort_session_wrapper.dart  ort_tensor.dart  ort_value_wrapper.dart  session_config.dart  xnnpack_options.dart
lib/bindings/: onnxruntime_generated.dart
linux/: CMakeLists.txt
scripts/: generate_pr.py
src/: CMakeLists.txt  flutter_ort_plugin.c
